--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   mysql:
     image: mysql:5.7
@@ -6,7 +5,7 @@ services:
       MYSQL_ROOT_PASSWORD: gdeta235R
       MYSQL_DATABASE: db_network
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
       - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
@@ -23,8 +22,8 @@ services:
       - "3000:3000"
     environment:
       - DB_HOST=mysql
-      - DB_USER=root
-      - DB_PASSWORD=1111
+      - DB_USER=sobol
+      - DB_PASSWORD=gdeta235R
       - DB_NAME=db_network
       - DB_PORT=3306
     depends_on:
