feat: added mysql info

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: gdeta235R
       MYSQL_DATABASE: db_network
+      MYSQL_USER: sobol
+      MYSQL_PASSWORD: gdeta235R
     ports:
       - "3306:3306"
     volumes:
