--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: gdeta235R
+      MYSQL_ROOT_PASSWORD: 1111
       MYSQL_DATABASE: db_network
       MYSQL_USER: sobol
       MYSQL_PASSWORD: gdeta235R
